# telepresence

./: Configuration.md  Configuration_AVPF_tail_length.md  Configuration_Audio.md  Configuration_Audio_Video_codecs.md  Configuration_Bridge_configuration.md  Configuration_Debugging_the_system.md  Configuration_NAT_Firewall_traversal.md  Configuration_Presentation_sharing.md  Configuration_RTP_buffer_size.md  Configuration_Recording_conference_to_a_file.md  Configuration_SIP_network_transports.md  Configuration_SIP_registration.md  Configuration_Security.md  Configuration_Video.md  README.md  Support_BuildingSourceCode.md  Support_FAQ.md  Support_Known_issues.md  Support_Roadmap.md  Support_Testing_the_system.md  Support_Tips.md  Technical_Audio_mixer_design.md  Technical_Bandwidth_management_and_congestion_control.md  Technical_Call_session_management.md  Technical_NAT_and_firewall_traversal.md  Technical_Presentation_sharing.md  Technical_Protecting_a_bridge_with_password.md  Technical_Recording_conference_to_a_file.md  Technical_SA_versus_AS_modes.md  Technical_Security.md  Technical_Stereoscopic_spatial_3D_audio.md  Technical_Video_mixer_design.md  Technical_Video_quality.md  configure.ac  opentelepresence.sln  telepresence.cfg  telepresence.vcproj
documentation/: technical-guide.doc
doubango/: tinyBFCP.vcproj  tinyDAV.vcproj  tinyHTTP.vcproj  tinyIPSec.vcproj  tinyMEDIA.vcproj  tinyMSRP.vcproj  tinyNET.vcproj  tinyRTP.vcproj  tinySAK.vcproj  tinySDP.vcproj  tinySIGCOMP.vcproj  tinySIP.vcproj  tinySMS.vcproj  tinyXCAP.vcproj
include/opentelepresence/: OTBridge.h  OTBridgeInfo.h  OTCodecAudio.h  OTCodecVideo.h  OTFrame.h  OTFrameAudio.h  OTMixerMgr.h  OTMixerMgrMgr.h  OTMutex.h  OTObject.h  OTProxyPluginConsumerVideo.h  OTProxyPluginMgr.h  OTProxyPluginProducer.h  OTProxyPluginProducerAudio.h  OTProxyPluginProducerVideo.h  OTWrap.h
include/opentelepresence/cfg/: OTCfgParser.h
include/opentelepresence/docstreamer/: OTDocStreamer.h  OTDocStreamerOpenOffice.h
include/opentelepresence/filters/: OTFilter.h  OTOverlay.h
include/opentelepresence/mixers/: OTMixerAudio.h  OTMixerAudio2D.h  OTMixerVideo.h  OTMixerVideo2D.h
include/opentelepresence/nettransport/: OTNetTransport.h
include/opentelepresence/patterns/: OTPattern.h  OTPatternVideo.h
ragel/: ragel.sh
source/: OTBridgeInfo.cc  OTCodec.cc  OTCodecAudio.cc  OTCodecVideo.cc  OTEngine.cc  OTFrameVideo.cc  OTObject.cc  OTProcess.cc  OTProxyPlugin.cc  OTProxyPluginConsumer.cc  OTProxyPluginConsumerVideo.cc  OTProxyPluginMgr.cc  OTProxyPluginProducerAudio.cc  OTSessionInfo.cc  OTWrap.cc
source/cfg/: OTCfg.cc
source/docstreamer/: OTDocStreamer.cc
source/filters/: OTOverlay.cc
source/jsoncpp/: jsoncpp.cc
source/mixers/: OTMixer.cc  OTMixerAudio2D.cc  OTMixerAudio3D.cc
source/nettransport/: OTHttpTransport.cc  OTNetTransport.cc
source/patterns/: OTPatternVideo.cc  OTPatternVideoWebEx.cc
source/presence/: OTPresenceParser.cc
source/recorder/: OTWebM.cc
trunk/: Makefile.am  configure.ac  opentelepresence.sln
trunk/doubango/: tinyDAV.vcproj  tinyIPSec.vcproj  tinyMEDIA.vcproj  tinySAK.vcproj
trunk/include/: OpenTelepresenceAPI.h  OpenTelepresenceConfig.h
trunk/include/opentelepresence/: OTCodec.h  OTCommon.h  OTEngine.h  OTFrameVideo.h  OTMixerMgrAudio.h  OTMixerMgrVideo.h  OTProcess.h  OTProxyPlugin.h  OTProxyPluginConsumer.h  OTProxyPluginConsumerAudio.h  OTResampler.h  OTRole.h  OTSessionInfo.h
trunk/include/opentelepresence/cfg/: OTCfg.h
trunk/include/opentelepresence/mixers/: OTMixer.h  OTMixerAudio3D.h  OTMixerVideo3D.h
trunk/include/opentelepresence/nettransport/: OTHttpTransport.h  OTNetTransport.h
trunk/include/opentelepresence/patterns/: OTPatternVideoHangout.h  OTPatternVideoWebEx.h
trunk/include/opentelepresence/presence/: OTPresenceNotifer.h  OTPresenceParser.h
trunk/include/opentelepresence/recorder/: OTWebM.h
trunk/ragel/: cfg.rl
trunk/source/: OTBridge.cc  OTEngine.cc  OTFrame.cc  OTFrameAudio.cc  OTMixerMgr.cc  OTMixerMgrAudio.cc  OTMixerMgrMgr.cc  OTMixerMgrVideo.cc  OTMutex.cc  OTProxyPluginConsumerAudio.cc  OTProxyPluginProducer.cc  OTProxyPluginProducerVideo.cc  OTResampler.cc  main.cc
trunk/source/cfg/: OTCfgParser.cc
trunk/source/docstreamer/: OTDocStreamerOpenOffice.cc
trunk/source/filters/: OTFilter.cc  OTOverlay.cc
trunk/source/mixers/: OTMixerAudio.cc  OTMixerVideo.cc  OTMixerVideo2D.cc  OTMixerVideo3D.cc
trunk/source/nettransport/: OTNetTransport.cc
trunk/source/patterns/: OTPattern.cc  OTPatternVideoHangout.cc
trunk/source/presence/: OTPresenceNotifer.cc
trunk/source/recorder/: OTRecorder.cc
trunk/thirdparties/win32/lib/: OpenAL32.lib
trunk/thirdparties/win32/lib/OpenAL-patched/: readme.txt
trunk/website/: SIPml-api.js  contact.htm  index.html  settings.htm
trunk/website/assets/js/holder/: holder.js
website/: contact.htm  index.html  settings.htm
wiki/: Configuration.wiki  Configuration_AVPF_tail_length.wiki  Configuration_Audio.wiki  Configuration_Audio_Video_codecs.wiki  Configuration_Bridge_configuration.wiki  Configuration_Debugging_the_system.wiki  Configuration_NAT_Firewall_traversal.wiki  Configuration_Presentation_sharing.wiki  Configuration_RTP_buffer_size.wiki  Configuration_Recording_conference_to_a_file.wiki  Configuration_SIP_network_transports.wiki  Configuration_SIP_registration.wiki  Configuration_Security.wiki  Configuration_Video.wiki  Support_BuildingSourceCode.wiki  Support_FAQ.wiki  Support_KnownIssues.wiki  Support_Known_issues.wiki  Support_Roadmap.wiki  Support_Testing_the_system.wiki  Support_Tips.wiki  Technical_Audio_mixer_design.wiki  Technical_Bandwidth_management_and_congestion_control.wiki  Technical_Call_session_management.wiki  Technical_NAT_and_firewall_traversal.wiki  Technical_Presentation_sharing.wiki  Technical_Protecting_a_bridge_with_password.wiki  Technical_Recording_conference_to_a_file.wiki  Technical_SA_versus_AS_modes.wiki  Technical_Security.wiki  Technical_Stereoscopic_spatial_3D_audio.wiki  Technical_Video_mixer_design.wiki  Technical_Video_quality.wiki
(+1 files in other folders)
